--- a/mongo/Gemfile
+++ b/mongo/Gemfile
@@ -15,6 +15,7 @@ gem 'coffee-rails', '~> 4.1.0'
 gem 'mongoid', :git => 'https://github.com/mongodb/mongoid.git'
 gem 'bson_ext'
 gem 'rails_admin'
+gem 'devise'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
